[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hullproof"
version = "0.2.0"
description = "Python client for the Hullproof API — physical asset condition intelligence, CoatingPassport, ISO 19030 hull performance"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Hullproof", email = "support@hullproof.com" }]
requires-python = ">=3.10"
keywords = ["maritime", "biofouling", "iso-19030", "hull-performance", "asset-condition", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://hullproof.com"
Documentation = "https://hullproof.com/docs/api"
Source = "https://github.com/jasonhawk-create/hullproof-dashboard/tree/main/clients/python"

[tool.hatch.build.targets.wheel]
packages = ["hullproof"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
